9.451:tasks.log.getList: add task number & title to the output
